--- a/README
+++ b/README
@@ -7,3 +7,7 @@ https://github.com/zfsonlinux/pkg-zfs.git
 
 We merged updates from the precice branch into the older wheezy 
 branch.
+
+For licensing questions, see:
+
+http://open-zfs.org/wiki/Talk:FAQ
