--- a/spl-debian-pve/changelog
+++ b/spl-debian-pve/changelog
@@ -1,4 +1,10 @@
-spl-linux (0.6.3-1~wheezy) unstable; urgency=low
+spl-linux (0.6.3-pve1~jessie) unstable; urgency=medium
+
+  * recompile for jessie
+
+ -- Proxmox Support Team <support@proxmox.com>  Sat, 28 Feb 2015 16:03:01 +0100
+
+spl-linux (0.6.3-pve1~wheezy) unstable; urgency=low
 
   * first version for Proxmox VE
 
