ignore zfs-import-scan errors
zpool import return error if we have no zfs pools. We want to ignore that.

--- a/zfs-debian-pve/changelog
+++ b/zfs-debian-pve/changelog
@@ -1,3 +1,9 @@
+zfs-linux (0.6.3-pve3~jessie) unstable; urgency=medium
+
+  * ignore zfs-import-scan errors
+
+ -- Proxmox Support Team <support@proxmox.com>  Tue, 31 Mar 2015 17:52:40 +0200
+
 zfs-linux (0.6.3-pve2~jessie) unstable; urgency=medium
 
   * use systemd for service startup
