--- a/zfs/debian/changelog
+++ b/zfs/debian/changelog
@@ -1,3 +1,10 @@
+zfs-linux (0.7.13-pve1~bpo1) unstable; urgency=medium
+
+  * base zfs-linux on upstream ZOL instead of debian
+  * update ZFS to 0.7.13
+
+ -- Proxmox Support Team <support@proxmox.com>  Tue, 05 Mar 2019 20:07:38 +0100
+
 zfs-linux (0.7.12-pve1~bpo1) unstable; urgency=medium
 
   * update ZFS to 0.7.12
