--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+zfs-linux (0.8.2-pve2) pve pmg; urgency=medium
+
+  * save and restore the FPU state using ZFS dedicated per-cpu FPU state
+    variables.
+
+ -- Proxmox Support Team <support@proxmox.com>  Wed, 23 Oct 2019 17:14:22 +0200
+
 zfs-linux (0.8.2-pve1) pve pmg; urgency=medium
 
   * update to new 0.8.2 upstream stable release
