--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zfs-linux (0.8.3-pve1) pve pmg; urgency=medium
+
+  * update ZFS to 0.8.3
+
+ -- Proxmox Support Team <support@proxmox.com>  Fri, 24 Jan 2020 09:10:41 +0100
+
 zfs-linux (0.8.2-pve2) pve pmg; urgency=medium
 
   * save and restore the FPU state using ZFS dedicated per-cpu FPU state
