--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zfs-linux (2.0.1-pve1) pve pmg; urgency=medium
+
+  * update ZFS to 2.0.1
+
+ -- Proxmox Support Team <support@proxmox.com>  Wed, 13 Jan 2021 14:16:02 +0100
+
 zfs-linux (0.8.5-pve1) pve pmg; urgency=medium
 
   * update ZFS to 0.8.5
