--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zfs-linux (2.0.2-pve1) pve pmg; urgency=medium
+
+  * update ZFS to 2.0.2
+
+ -- Proxmox Support Team <support@proxmox.com>  Sat, 06 Feb 2021 10:23:03 +0100
+
 zfs-linux (2.0.1-pve1) pve pmg; urgency=medium
 
   * update ZFS to 2.0.1
