--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zfs-linux (2.0.4-pve1) pve pmg; urgency=medium
+
+  * update ZFS to 2.0.4
+
+ -- Proxmox Support Team <support@proxmox.com>  Thu, 18 Mar 2021 13:31:18 +0100
+
 zfs-linux (2.0.3-pve2) pve pmg; urgency=medium
 
   * match package names to the ones used by Debian
