--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zfs-linux (2.1.1-pve1) bullseye; urgency=medium
+
+  * update ZFS to 2.1.1
+
+ -- Proxmox Support Team <support@proxmox.com>  Tue, 28 Sep 2021 06:16:14 +0200
+
 zfs-linux (2.0.5-pve1) bullseye; urgency=medium
 
   * update ZFS to 2.0.5
