--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zfs-linux (2.1.3-pve1) bullseye; urgency=medium
+
+  * update ZFS to 2.1.3
+
+ -- Proxmox Support Team <support@proxmox.com>  Fri, 11 Mar 2022 16:36:22 +0100
+
 zfs-linux (2.1.2-pve1) bullseye; urgency=medium
 
   * update ZFS to 2.1.2
