--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zfs-linux (2.1.4-pve1) bullseye; urgency=medium
+
+  * update ZFS to 2.1.4
+
+ -- Proxmox Support Team <support@proxmox.com>  Thu, 24 Mar 2022 09:28:50 +0100
+
 zfs-linux (2.1.3-pve1) bullseye; urgency=medium
 
   * update ZFS to 2.1.3
