--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+zfs-linux (2.1.6-pve1) bullseye; urgency=medium
+
+  * update ZFS to 2.1.6
+
+  * symlink zpool_influxdb to /bin
+
+  * symlink zfs, zpool to /bin/ for non-root usage
+
+ -- Proxmox Support Team <support@proxmox.com>  Tue, 04 Oct 2022 16:09:17 +0200
+
 zfs-linux (2.1.5-pve1) bullseye; urgency=medium
 
   * update ZFS to 2.1.5
