--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zfs-linux (2.1.9-pve1) bullseye; urgency=medium
+
+  * update ZFS to 2.1.9
+
+ -- Proxmox Support Team <support@proxmox.com>  Sat, 28 Jan 2023 15:03:22 +0100
+
 zfs-linux (2.1.7-pve3) bullseye; urgency=medium
 
   * backport a fix for as potentially hanging pipe when resizing it on recv
